Added /note command, added new per-user threads system